grafana/graf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
  annotations:
          #cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: grafana
      protocol: TCP
      port: 3000
      targetPort: 3000
      #nodePort: 30026
