grafana/ingress-resource-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graf-ingress
spec:
  rules:
  - host: graf.devops.to
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
